--- a/index.html
+++ b/index.html
@@ -70,22 +70,36 @@
   <label>📦 Producto</label>
   <select id="producto">
     <optgroup label="🧁 Comida">
-      <option value="30">Cupcake de Fresa - 30$</option>
-      <option value="30">Cupcake de Limón - 30$</option>
-      <option value="30">Muffin de Chocolate - 30$</option>
-      <option value="25">Gofre con Nutella - 25$</option>
-      <option value="25">Crep con Nutella - 25$</option>
-      <option value="20">Mochis - 20$</option>
-      <option value="15">Helado de Fresa - 15$</option>
+      <option value="23">Nigiri de Salmón Flameado - 23$</option>
+      <option value="22">Cupcake de Limón - 22$</option>
+      <option value="22">Cupcake de Fresa - 22$</option>
+      <option value="22">Nigiri de Salmón con Philadelphia - 22$</option>
+      <option value="20">Muffin de Chocolate - 20$</option>
+      <option value="18">Crep con Nutella - 18$</option>
+      <option value="18">Mochis - 18$</option>
+      <option value="18">Gofre con Nutella - 18$</option>
+      <option value="13">Bocadillo Vegetariano - 13$</option>
+      <option value="13">Sandwich - 13$</option>
+      <option value="7">Helado de Fresa - 7$</option>
     </optgroup>
     <optgroup label="🧋 Bebidas">
-      <option value="17">Capuchino (Varios) - 17$</option>
-      <option value="16">Batido (Varios) - 16$</option>
-      <option value="20">Té Boba - 20$</option>
+      <option value="16">Té Boba - 16$</option>
+      <option value="14">Capuchino de Caramelo - 14$</option>
+      <option value="14">Capuchino de Fresa - 14$</option>
+      <option value="14">Capuchino de Chocolate - 14$</option>
+      <option value="14">Capuchino de Pistacho - 14$</option>
+      <option value="13">Capuchino de Vainilla - 13$</option>
+      <option value="11">Batido de Mora - 11$</option>
+      <option value="11">Batido de Fresa - 11$</option>
+      <option value="9">Café Cappuccino - 9$</option>
+      <option value="9">Café con Leche - 9$</option>
+      <option value="9">Batido de Menta - 9$</option>
+      <option value="4">Café Solo - 4$</option>
     </optgroup>
     <optgroup label="🌟 Exclusivos">
-      <option value="25">Remune - 25$</option>
-      <option value="25">Batido Gominola - 25$</option>
+      <option value="25">Remune de Melocotón - 25$</option>
+      <option value="25">Batido de Gominola - 25$</option>
+      <option value="25">Remune de Melón - 25$</option>
     </optgroup>
   </select>
 
